[package]
name = "code-open-server"
version = "0.1.0"
authors = ["Akihiro Shoji <alpha.kai.net@alpha-kai-net.info>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=4.5.6"
code-open-common = { path = "../code-open-common" }
dirs = "=5.0.1"
once_cell = "=1.19.0"
rmp-serde = "=1.3.0"
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "=1.0.117"
