[package]
name = "code-open-server"
version = "0.1.0"
authors = ["Akihiro Shoji <alpha.kai.net@alpha-kai-net.info>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=4.5.20"
code-open-common = { path = "../code-open-common" }
dirs = "=5.0.1"
once_cell = "=1.20.2"
rmp-serde = "=1.3.0"
serde = { version = "=1.0.215", features = ["derive"] }
serde_json = "=1.0.132"
