[package]
name = "code-open-server"
version = "0.1.0"
authors = ["Akihiro Shoji <alpha.kai.net@alpha-kai-net.info>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=4.6.1"
code-open-common = { path = "../code-open-common" }
dirs = "=6.0.0"
once_cell = "=1.21.4"
rmp-serde = "=1.3.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
