[package]
name = "code-open"
version = "0.1.0"
authors = ["Akihiro Shoji <alpha.kai.net@alpha-kai-net.info>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.28", features = ["derive"] }
code-open-common = { path = "../code-open-common" }
gethostname = "0.4.0"
path-absolutize = "3.0.14"
rmp-serde = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "2.1.2"
