[package]
name = "code-open"
version = "0.1.0"
authors = ["Akihiro Shoji <alpha.kai.net@alpha-kai-net.info>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.5.8", features = ["derive"] }
code-open-common = { path = "../code-open-common" }
gethostname = "=0.5.0"
path-absolutize = "=3.1.1"
rmp-serde = "=1.3.0"
serde = { version = "=1.0.203", features = ["derive"] }
shellexpand = "=3.1.0"
